# sign-language-nlp

./: .flake8  .gitignore  README.md  __init__.py  args.py  exported.py  helper.py  main.py  optimize.py  pyproject.toml  read_out.py  requirements.txt  runner.py  sl_transformer-bkp.py  sl_transformer.py  sl_transformer_torch.py  tmp.json  tmp_bal.json  transformer_model.py  util.py
.github/workflows/: build.yml  code-quality.yml
cluster/: az-run-task-dist.sh  az-run-task.sh  az-start-scheduler.sh  az-start-workers.sh  cancel-all.sh  debug-task.sh  info-cluster.sh  run-all.sh  run-task-old.sh  run-task.sh  start-workers.sh  status-cluster.sh  tail-all.sh
cluster/tasks/: az-transformer.sh  distributed.slurm  enc-dec-gru-attn.slurm  enc-dec-lstm-attn.slurm  grid-enc-dec-gru-attn.slurm  grid-enc-dec-lstm-attn.slurm  grid-transformer.slurm  launch-workers.slurm  train-enc-dec-gru-attn.slurm  train-enc-dec-lstm-attn.slurm  train-transformer.slurm  transformer.slurm
config/: config-cluster.yaml  config-debug.yaml  config-enc-dec-gru-attn.yaml  config-enc-dec-lstm-attn.yaml  config-grid-enc-dec-gru-attn.yaml  config-grid-enc-dec-lstm-attn.yaml  config-grid-gru.yaml  config-grid-lstm.yaml  config-grid-seq2seq-lstm-attn.yaml  config-grid-seq2seq-lstm.yaml  config-grid-transformer.yaml  config-grid.yaml  config-train-enc-dec-gru-attn.yaml  config-train-enc-dec-lstm-attn.yaml  config-train-seq2seq-lstm-attn.yaml  config-train-transformer.yaml  config-transformer.yaml  config.yaml
dataset/: __init__.py  asl_dataset.py  dataset.py  field_composer.py  iterator.py
dataset/builder/: __init__.py  dataset_builder.py
dataset/constant/: tokens.py
example/: first_example.py  real_world_example.py
model/: __init__.py  encoder_decoder_gru_attn.py  encoder_decoder_lstm_attn.py  encoder_decoder_transformer_attn.py  gru.py  lstm.py  lstm_new.py  model.py  rnn_relu.py  rnn_tanh.py  seq2seq_lstm.py  seq2seq_lstm_attn.py  transformer.py
model/base/: __init__.py  attention.py  encoder_decoder_attn.py  encoder_decoder_attn_bkp.py  rnn.py
model/builder/: model_builder.py
model/util/: util.py
v2/: __init__.py  model_builder.py  model_runner.py  sl_rnn.py  sl_transformer.py  util.py
v2/dataset/: __init__.py  custom_iterator.py  dataset_builder.py  field_composer.py
v2/loss/: __init__.py  label_smoothing_loss.py  noam_opt.py
v2/model/: __init__.py  custom_model.py  positional_encoding.py  rnn_model.py  transformer_model.py  (+1 more)
