[tool.poetry]
name = "sl-transformer"
version = "0.1.0"
description = ""
authors = ["Cleison Amorim <cca5@cin.ufpe.br>"]

[tool.poetry.dependencies]
python = "^3.7"
commons-python = { git = "https://github.com/amorim-cleison/commons-python.git", branch = "develop" }
torchtext= "^0.6.0"
spacy = "^2.3.2"
seaborn = "^0.11.0"
torch = [
    { platform = "linux", url = "https://files.pythonhosted.org/packages/5d/5e/35140615fc1f925023f489e71086a9ecc188053d263d3594237281284d82/torch-1.6.0-cp37-cp37m-manylinux1_x86_64.whl"},
    { platform = "win32", url = "https://download.pytorch.org/whl/cpu/torch-1.6.0%2Bcpu-cp37-cp37m-win_amd64.whl"}
]

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
yapf = "^0.30.0"
pre-commit = "^2.7.1 "
pytest = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

