[tool.poetry]
name = "sl-transformer"
version = "0.1.0"
description = ""
authors = ["Cleison Amorim <cca5@cin.ufpe.br>"]
readme = "README.md"
packages = [
    { include = "**/*.py"}
]

[tool.poetry.dependencies]
python = "^3.8"
# commons-python = { git = "https://github.com/amorim-cleison/commons-python.git", branch = "develop" }
commons-python = { path = "../commons-python/", develop = false }
torchtext= "^0.6.0"
torch = "1.12.1"
numpy = "1.21.0"
pandas = "^1.3.2"
skorch = "^0.10.0"
imbalanced-learn = "^0.8.1"
scikit-learn = "^1.1.2"
dask-cuda = "^22.8.0"
dask = {version = "^2022.7.1", extras = ["complete"]}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
yapf = "^0.30.0"
pytest = "^6.1.1"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

